Sun Aug 11 18:07:39 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb
	  (REXML::Parsers::BaseParser#pull_event): Support optional NDATA
	  in parameter entity declaration.

Sun Aug 11 17:54:07 2013  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS (REXML::Parsers::SAX2Parser): Add about this change.
	* lib/rexml/parsers/sax2parser.rb (REXML::Parsers::SAX2Parser#parse):
	  Fix wrong number of arguments. Document says "an array of the
	  entity declaration" but it passes two or more arguments.
	  This is a bug but it break backward compatibility.
	  Reported by Ippei Obayashi. [Bug #8731] [ruby-dev:47582]
	* lib/rexml/sax2listener.rb (REXML::SAX2Listener#entitydecl): ditto.
	  The listener template accepted two arguments.
	* test/rexml/parser/test_sax2.rb: Add tests for external ID case.

Sun Aug 11 17:41:41 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parser/test_sax2.rb: Add SAX2 API test.

Sun Aug 11 15:10:40 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_enc_symname_type): allow ID_ATTRSET for ID_INSTANCE,
	  ID_GLOBAL, ID_CLASS, ID_JUNK too.  [Bug #8756]

Sun Aug 11 13:17:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* include/ruby/encoding.h: Reduce ENCODING_INLINE_MAX to 127 as this
	  should be sufficient to represent all the encodings Ruby supports.

Sun Aug 11 11:54:38 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): New method.
	  This is accepted in the meeting:
	  https://bugs.ruby-lang.org/projects/ruby/wiki/DevelopersMeeting20130809
	  This method is accepted as a CRuby feature.
	  I.e. Other Ruby implementations don't need to implement it.
	  [ruby-core:56087] [Feature #8658]

Sun Aug 11 10:40:48 2013  Zachary Scott  <e@zzak.io>

	* lib/time.rb: [DOC] Correcting rdoc visibility of time.rb constants
	  Reported by Tanaka Akira [ruby-core:56517]

Sun Aug 11 04:48:14 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (rb_str_normalize_ospath):