@@ -1,3 +1,9 @@
+Sun Aug 11 18:08:40 2013  Kouhei Sutou  <kou@cozmixng.org>
+
+	* lib/rexml/parsers/sax2parser.rb (REXML::Parsers::SAX2Parser#parse):
+	  Support NDATA in external entity declaration.
+	* test/rexml/parser/test_sax2.rb: Add tests for the above case.
+
 Sun Aug 11 18:07:39 2013  Kouhei Sutou  <kou@cozmixng.org>
 
 	* lib/rexml/parsers/baseparser.rb
